<resources>
	<string name="app_name">QR Code Scanner</string>
	<string name="app_icon_contentDescription">Tranning QR Scanner</string>
	
	<string name="skip">Skip</string>
	<string name="next">Next</string>
	<string name="start">Start</string>
	<string name="allow">Allow</string>
	<string name="deny">Deny</string>
	<string name="go_setting">Go Setting</string>
	<string name="got_it">Got It</string>
	<string name="copied">Copied</string>
	<string name="scanning">Scanning...</string>
	
	<string name="default_contentDescription">Image</string>
	
	<string name="splash_activity_note">This action maybe contains ads</string>
	
	<string name="language_activity_title">Languages</string>
	
	<string name="intro_activity_title1">QR &amp; Barcode Scanner</string>
	<string name="intro_activity_content1">Scan unlimited QR codes and barcodes exactly!</string>
	<string name="intro_activity_title2">Ceate QR Code</string>
	<string name="intro_activity_content2">Support for links, business card, wifi, event,....</string>
	<string name="intro_activity_title3">Customize Style QR</string>
	<string name="intro_activity_content3">Style your QR codes to suit your needs.</string>
	
	<string name="nav_scan">Scan</string>
	<string name="scan_single">Scan</string>
	<string name="scan_batch">Batch</string>
	<string name="default_zoom_level">1x</string>
	<string name="scan_tutorial_title">Point your camera at the code auto scan</string>
	<string name="scan_tutorial_content">Make sure the code is clear and visible within the detection box that shows in
		your camera view.
		Avoid light reflections or shadows on the code.
	</string>
	
	<string name="scan_result">Scan Result</string>
	<string name="favorite">Favorite</string>
	<string name="website">Website</string>
	<string name="email">Email</string>
	<string name="email_to">To</string>
	<string name="email_subject">Subject</string>
	<string name="email_content">Content</string>
	<string name="wifi">Wifi</string>
	<string name="wifi_name">Network name</string>
	<string name="wifi_security">Security</string>
	<string name="wifi_password">Password</string>
	<string name="message">Message</string>
	<string name="message_tel">Tel</string>
	<string name="message_content">Content</string>
	<string name="text">Text</string>
	<string name="text_content">Content</string>
	<string name="telephone">Telephone</string>
	<string name="telephone_name">Name</string>
	<string name="telephone_tel">Tel</string>
	<string name="contacts">Contacts</string>
	<string name="contacts_name">Name</string>
	<string name="contacts_tel">Tel</string>
	<string name="contacts_email">E-mail</string>
	<string name="contacts_address">Address</string>
	<string name="contacts_url">URL</string>
	<string name="calendar">Calendar</string>
	<string name="calendar_subject">Subject</string>
	<string name="calendar_start">Start</string>
	<string name="calendar_end">End</string>
	<string name="calendar_note">Note</string>
	<string name="calendar_address">Address</string>
	<string name="map">Map</string>
	<string name="map_lat">Latitude</string>
	<string name="map_long">Longitude</string>
	
	<string name="open_url">Open URL</string>
	<string name="copy">Copy</string>
	<string name="share">Share</string>
	<string name="send_mail">Send email</string>
	<string name="add_contact">Add contact</string>
	<string name="connect">Connect</string>
	<string name="copy_password">Copy password</string>
	<string name="send_sms">Send SMS</string>
	<string name="search_web">Search web</string>
	<string name="call">Call</string>
	<string name="direction">Direction</string>
	<string name="add_event">Add to event</string>
	<string name="show_on_map">Show on map</string>
	
	<string name="nav_create">Create</string>
	<string name="create_qr_title">Create QR Code</string>
	<string name="my_business_card">My Business Card</string>
	<string name="personal">Personal</string>
	<string name="email_address">Email Address</string>
	<string name="contact_info">Contact info</string>
	<string name="social">Social</string>
	<string name="whatsapp">WhatsApp</string>
	<string name="facebook">Facebook</string>
	<string name="twitter">Twitter</string>
	<string name="instagram">Instagram</string>
	<string name="tiktok">Tiktok</string>
	<string name="telegram">Telegram</string>
	<string name="youtube">Youtube</string>
	<string name="spotify">Spotify</string>
	<string name="utilities">Utilities</string>
	<string name="email_hint">Please fill in the email</string>
	<string name="subject_hint">Please fill in the subject</string>
	
	<string name="nav_history">History</string>
	
	<string name="nav_settings">Settings</string>
	<string name="scan_tutorial">Align QR code/Barcode within the frame</string>
	
	<string name="no_permission_dialog_title">Why do we need your permissions?</string>
	<string name="no_permission_dialog_message">QR Code needs camera access permission to scan QR code/barcodes.
	</string>
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="message_hint">Please input email content</string>
	<string name="create">Create</string>
	<string name="link">Link</string>
	<string name="link_website_hint">Please fill in the website address</string>
	<string name="name">Name</string>
	<string name="contact_name_hint">Please fill in the contact name</string>
	<string name="phone_number">Phone number</string>
	<string name="phone_number_hint">Please fill in the phone number</string>
	<string name="contact_email_hint">Please fill in the email</string>
	<string name="telephone_phone_number_hint">Please enter your phone number</string>
	<string name="recipient_number">Recipient number</string>
	<string name="recipient_number_hint">Please fill in the recipient number</string>
	<string name="message_message_hint">Please input message content</string>
	<string name="business_card_name_hint">Please enter your name</string>
	<string name="business_card_phone_number_hint">Please enter your phone number</string>
	<string name="e_mail">E-mail</string>
	<string name="business_card_e_mail_hint">Please enter your mail</string>
	<string name="address">Address</string>
	<string name="address_hint">Please enter your address</string>
	<string name="birthday">Birthday</string>
	<string name="company">Company</string>
	<string name="company_hint">Please enter your company address</string>
	<string name="description">Description</string>
	<string name="default_hint">Please enter something</string>
	<string name="username">Username</string>
	<string name="create_qr_detail_whatsapp_note">Others can contact you directly on WhatsApp by scanning the QR code you
		create.
	</string>
	<string name="url">URL</string>
	<string name="content">Content</string>
	<string name="network_name">Network name</string>
	<string name="ssid_hint">Please fill in the SSID</string>
	<string name="security_mode">Security mode</string>
	<string name="none">None</string>
	<string name="password">Password</string>
	<string name="password_hint">Please fill in the password</string>
	<string name="content_hint">Please fill in the content</string>
	<string name="title">Title</string>
	<string name="calendar_title_hint">Please enter event title</string>
	<string name="all_day">All day</string>

</resources>