<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingHorizontal="16dp"
>
	<ImageView
			android:layout_width="72dp"
			android:layout_height="72dp"
			android:src="@drawable/ic_scan_result_contact"
			android:layout_marginTop="24dp"
			android:layout_gravity="center"
			android:contentDescription="@string/default_contentDescription"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/name"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="24dp"
			android:layout_marginBottom="8dp"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:id="@+id/createQrDetailFragmentFormContact_name"
			android:hint="@string/contact_name_hint"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints=""
			android:inputType="text"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/phone_number"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="8dp"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:id="@+id/createQrDetailFragmentFormContact_phoneNumber"
			android:hint="@string/phone_number_hint"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints="phone"
			android:inputType="phone"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/email_address"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="8dp"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress"
			android:ems="10"
			android:id="@+id/createQrDetailFragmentFormContact_email"
			android:hint="@string/contact_email_hint"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints="emailAddress"
	/>

</LinearLayout>