<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:orientation="vertical"
		android:paddingHorizontal="16dp"
>
	<ImageView
			android:layout_width="72dp"
			android:layout_height="72dp"
			android:src="@drawable/ic_scan_result_email"
			android:layout_marginTop="24dp"
			android:layout_gravity="center"
			android:contentDescription="@string/default_contentDescription"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/email_address"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="24dp"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress"
			android:ems="10"
			android:id="@+id/createQrDetailFragmentFormEmail_email"
			android:hint="@string/email_hint"
			android:layout_marginTop="8dp"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints="emailAddress"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/calendar_subject"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="16dp"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress"
			android:ems="10"
			android:id="@+id/createQrDetailFragmentFormEmail_subject"
			android:hint="@string/subject_hint"
			android:layout_marginTop="8dp"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints="emailAddress"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/message"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="16dp"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress"
			android:ems="10"
			android:id="@+id/createQrDetailFragmentFormEmail_message"
			android:hint="@string/message_hint"
			android:layout_marginTop="8dp"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints="emailAddress"
	/>


</LinearLayout>