<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
		android:orientation="vertical"
		android:paddingHorizontal="16dp"
>
	<ImageView
			android:layout_width="72dp"
			android:layout_height="72dp"
			android:src="@drawable/ic_scan_result_wifi"
			android:layout_marginTop="24dp"
			android:layout_gravity="center"
			android:contentDescription="@string/default_contentDescription"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/network_name"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="24dp"
			android:layout_marginBottom="8dp"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress"
			android:ems="10"
			android:id="@+id/createQrDetailFragmentFormEmail_email"
			android:hint="@string/ssid_hint"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints="emailAddress"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/security_mode"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="8dp"
	/>
	
	<com.google.android.material.tabs.TabLayout
			android:id="@+id/createQrDetailFragmentFormSocial_option"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			
			android:background="@drawable/bg_white_corner_32"
			app:tabMode="fixed"
			app:tabGravity="fill"
			app:tabIndicator="@drawable/bg_primary_corner_32"
			app:tabIndicatorFullWidth="true"
			app:tabIndicatorGravity="stretch"
			app:tabIndicatorColor="@color/primary"
			app:tabTextColor="@drawable/selector_white_black"
	>
		<com.google.android.material.tabs.TabItem
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="WPA/WPA2"
				tools:ignore="HardcodedText"
		/>
		
		<com.google.android.material.tabs.TabItem
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="WEP"
				tools:ignore="HardcodedText"
		/>
		
		<com.google.android.material.tabs.TabItem
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/none"
		/>
	</com.google.android.material.tabs.TabLayout>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/password"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="8dp"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="none"
			android:ems="10"
			android:id="@+id/createQrDetailFragmentFormEmail_message"
			android:hint="@string/password_hint"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints=""
			tools:ignore="TextFields"
	/>

</LinearLayout>