<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingHorizontal="16dp"
>
	<ImageView
			android:layout_width="72dp"
			android:layout_height="72dp"
			android:src="@drawable/ic_scan_result_calendar"
			android:layout_marginTop="24dp"
			android:layout_gravity="center"
			android:contentDescription="@string/default_contentDescription"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/title"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="8dp"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:id="@+id/createQrDetailFragmentFormMessage_recipientNumber"
			android:hint="@string/calendar_title_hint"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints="phone"
			android:inputType="phone"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/all_day"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="8dp"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:id="@+id/createQrDetailFragmentFormMessage_1"
			android:hint="@string/calendar_title_hint"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints="phone"
			android:inputType="phone"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:layout_marginTop="8dp"
			android:id="@+id/createQrDetailFragmentFormMessage_2"
			android:hint="@string/calendar_title_hint"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints="phone"
			android:inputType="phone"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/description"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="8dp"
	/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textMultiLine"
			android:ems="10"
			android:minLines="4"
			android:id="@+id/createQrDetailBusinessCard_description"
			android:hint="@string/content_hint"
			android:background="@drawable/selector_input_field"
			android:paddingHorizontal="16dp"
			android:paddingVertical="14dp"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="14sp"
			android:textCursorDrawable="@drawable/cusor_primary"
			android:autofillHints=""
			android:gravity="top|start"
	/>

</LinearLayout>