<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
		android:orientation="vertical"
		android:paddingHorizontal="16dp"
>
	<ImageView
			android:layout_width="72dp"
			android:layout_height="72dp"
			android:src="@drawable/ic_whatsapp"
			android:layout_marginTop="24dp"
			android:layout_gravity="center"
			android:contentDescription="@string/default_contentDescription"
	/>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/username"
			android:textColor="@color/neutral"
			android:fontFamily="@font/inter_600_semi_bold"
			android:textSize="14sp"
			android:layout_marginTop="24dp"
			android:layout_marginBottom="8dp"
	/>
	
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
	>
		<com.google.android.material.button.MaterialButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:backgroundTint="@color/primaryDisable"
				android:text="+84"
				android:insetLeft="0dp"
				android:insetTop="0dp"
				android:insetRight="0dp"
				android:insetBottom="0dp"
				android:paddingVertical="14dp"
				android:paddingHorizontal="16dp"
				app:cornerRadius="16dp"
				android:minWidth="72dp"
				tools:ignore="HardcodedText"
				android:textColor="@color/primary"
				android:textSize="14sp"
				android:fontFamily="@font/inter_500_medium"
		/>
		
		<EditText
				android:id="@+id/createQrDetailFragmentFormWhatsapp_username"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:ems="10"
				android:hint="@string/phone_number"
				android:background="@drawable/selector_input_field"
				android:paddingHorizontal="16dp"
				android:paddingVertical="14dp"
				android:fontFamily="@font/inter_500_medium"
				android:textSize="14sp"
				android:textCursorDrawable="@drawable/cusor_primary"
				android:autofillHints="emailAddress"
		/>
	</LinearLayout>
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/create_qr_detail_whatsapp_note"
			android:textColor="@color/neutral2"
			android:fontFamily="@font/inter_500_medium"
			android:textSize="12sp"
			android:layout_marginTop="16dp"
	/>

</LinearLayout>